--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -4,6 +4,7 @@
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
+	font-family: 'Orbitron', sans-serif;
 }
 
 #root {
@@ -11,7 +12,6 @@
 	width: 100%;
 	height: 100vh;
 	overflow: hidden;
-	font-family: 'Orbitron', sans-serif;
 	color: whitesmoke;
 }
 
@@ -21,4 +21,17 @@ li {
 
 a {
 	text-decoration: none;
+}
+
+body {
+	background-color: #01181f;
+}
+
+input,
+textarea {
+	outline: none
+}
+
+textarea {
+	resize: none;
 }
